/* Waa kuma Tun Dr Maathir Bin Mohamed */

--- a/Mahathir_Bin_Maxamed.mw
+++ b/Mahathir_Bin_Maxamed.mw
@@ -13,9 +13,9 @@ Wax uu aamin san yahay in dhibka dunida Islaamka iminka ka taagan ay masuul ka y
  
 '''Tun Dr Mahathir Bin Maxamed''' waxaa uu dhashay 20 December [[1925]] waxaana uu ku dhashay Alor Setar oo ah magaalo madaxda gobolka Kedah oo dhacda dhinaca waqooyiga dalka Malaysia,waxaa uu dhameeyay waxbarashada Dugsiga sare sanadkii 1947 waxana uu sidoo kale wax ka soo bartay machadka Edward VII College ee dhanka daawada oo ku yaala Singapore,markii uu soo dhameeyay wax barashadiisa,ayaa waxaa uu ku soo biiray Dawladda shaqaalaheeda dhanka caafimadaadka,waxaana uu shaqadaasi joojiyay sanadkii 1957.
 
-Dr. Mahathir sanadkii 1944 ayaa waxaa uu xubin ka noqday Ururka Midowa malasiya ee wadaniga ah, (United Malays National Organisation) (UMNO) sanadkii 1964 ayaa waxaa uu ka mid noqday baarlaamka Dawladda Malashiya,
+Dr. Mahathir sanadkii 1944 ayaa waxaa uu xubin ka noqday Ururka Midowga malasiya ee wadaniga ah, (United Malays National Organisation) (UMNO) sanadkii 1964 ayaa waxaa uu ka mid noqday baarlaamka Dawladda Malashiya,
 
-Markii la arkay in Dr. Mahathir uu yahay nin aad u danayo wax barashada ayaa sanadkii 1968 laga dhigay gudoomiyaha sare ee gudiga wax barashada,sanadkii 1972 ayaa waxaa uu xubin ka noqday jaamacda Maxkamada iyo waliba jaamacada Malaya,sanadkii 1974 ayaa waxaa uu noqday gudoomiyaha jaamacada gudigeeda.
+Markii la arkay in Dr. Mahathir uu yahay nin aad u daneeyo wax barashada ayaa sanadkii 1968 laga dhigay gudoomiyaha sare ee gudiga waxbarashada,sanadkii 1972 ayaa waxaa uu xubin ka noqday jaamacda Maxkamada iyo waliba jaamacada Malaysia,sanadkii 1974 ayaa waxaa uu noqday gudoomiyaha jaamacada gudigeeda.
 
 Sanadkii 1976 ayaa waxaa loo magacaabay inuu noqdo Ra'isul wasaare ku xigaynka dalka isla markaa ah wasiirka wax barashada. 
 
@@ -24,8 +24,6 @@ Sanadkii 1976 ayaa waxaa loo magacaabay inuu noqdo Ra'isul wasaare ku xigaynka d
 Sanadihii 1997/1998 ayaa waxaa uu sameeyay Dr Mahathir Badhiga caalamiga ah ee gargaarka dalka Malasiya kaas oo tusaale fiican u noqday horukaca dhaqaale ee dalka Malaysia. 
 
 Oct 31, 2003, ayaa waxaa talada dalka Malaysia ka dagay Raiisul wasaarahii dalkaasi Dr Mahathir isagoo noqday ninkii 4 aad oo dalkaasi jagadaa ka soo qabta laakiisne gaarsiiyay hor mar ay dadkiisu ku naaloonayaan ilaa iyo maantadaan oo ay Daxay gacmeedka gaareen,waxaana uu dalkiisa ka dhigay dalka 17-aad ee dhaqaalaha caalamka ugu wayn .
-
-
 
 == Sidee buu ku gaaray dalka Malaysia hormarka dhaqaale ee uu maanta ku tiigsanayo ? ==
 
