Replacing Burger_King_Logo.svg with [[File:Burger_King_logo.svg]] (by [[:c:User:CommonsDelinker|CommonsDelinker]] because: file renamed or replaced on Commons).

--- a/Burger_King.mw
+++ b/Burger_King.mw
@@ -1,5 +1,5 @@
 {{Infobox Burger King
-| logo           = Burger King Logo.svg
+| logo           = Burger King logo.svg
 | text           = Astaanta Burger King
 | company_slogan = ''Sidaad jeceshahay''<ref>{{cite news|url=http://nypost.com/2014/05/21/burger-kings-revamped-be-your-way-slogan-isnt-meaty-enough/|title=Burger King's revamped 'Be Your Way' slogan isn't meaty enough|first=John|last=Crudele|date=May 22, 2014|work=nypost.com}}</ref>
 | size           = 150px
