Tiraada waa qalad

--- a/Hilibi_Maxamed.mw
+++ b/Hilibi_Maxamed.mw
@@ -3,7 +3,7 @@ Beesha Hilibi Maxamed ( Af-Ingiriis : Hilibi mohamed; Af-Carabi: هلبي محم
 
 
 
-Tirada dadka=1,000,000 ilaa 1,500,000|
+Tirada dadka=100 000 ilaa 500,000|
 
 {{flagcountry|Somalia}}|
 
