--- a/Xadiis.mw
+++ b/Xadiis.mw
@@ -1,19 +1,7 @@
-'''Xadiis'''
-
-'''Xadiis''' ([[ingiriis]]: Hadith) waa hadalkii iyo qowlkii [[Nebi Muxamed]][[File:Mohamed peace be upon him.svg|18px]] kaasi ooy ururiyeen isla markaana qoreen [[asxaabi|asxaabtu]].
+[[File:Hadith1.png|right]]
+'''Xadiis''' ({{lang-ar|حديث‎}}) waa hadalkii iyo qowlkii [[Nebi Muxamed]][[File:Mohamed peace be upon him.svg|18px]] kaasi ooy ururiyeen isla markaana qoreen [[asxaabi|asxaabtu]].
 
 = Xigasho =
 {{Reflist}}islamway.com
 
-[[Category:Kitaab]]
-[[Category:Nabiyada Islaamka]]
-[[Category:Islaam]]
-[[Category:Quraan]]
-[[Category:Islam]]
-[[Category:Masiixiyad]]
-[[Category:Diin]]
-[[Category:Taariikh]]
-[[Category:Aqoon]]
-[[Category:Kalandar]]
-[[Category:Nabi]]
-[[Category:Aadam iyo Xaawo]]
+[[Category:Xadiis]]
