*Empty MediaWiki Message*

--- a/Ra'iisul_wasaarayaashii_Soomaaliya.mw
+++ b/Ra'iisul_wasaarayaashii_Soomaaliya.mw
@@ -248,7 +248,7 @@ Raisulwasaraayaashii Somaliya==
 |-
 !(15)
 |[[Mahdi Mohamed Guleid]]
-|
+|[[File:Mahdi Mohammed Gulaid - 2020.jpg|thumb|83x83px]]
 |
 |—
 |25 July 2020
@@ -265,7 +265,8 @@ File:Dr. Ali Khalif Galaydh Photo.JPG
 File:Ali Mohammed Ghedi in Kenya.jpg
 
 File:Nuur Xasan Xuseen.jpg
-File:Cabdiweli Maxamed Cali.jpg|<center>[[Abdiweli Maxamed Cali]]</br> [[2011]] - [[2012]]</center>
+File:Cabdiweli Maxamed Cali.jpg
+File:Mahdi Mohammed Gulaid - 2020.jpg|<center>[[Abdiweli Gaas]]</br> [[2011]] - [[2012]]</center>
 |[[Abdi farah Shirdon]]
 |[[Abdiwali sheikh Ahmed]]
 </gallery>
