*Empty MediaWiki Message*

--- a/Ra'iisul_wasaarayaashii_Soomaaliya.mw
+++ b/Ra'iisul_wasaarayaashii_Soomaaliya.mw
@@ -28,7 +28,7 @@ Raisulwasaraayaashii Somaliya==
 |colspan="8" bgcolor="lightgrey" align=center| [[File:Flag of Somalia.svg|25px]] • '''[[Jamhuuriyadda Soomaaliya]]''' (1960–1969) • [[File:Coat of arms of Somalia.svg|20px]]
 |-
 ! style="background:#348AC9; color:white;"|2
-| [[Maxamed Xaaji Ibraahim Cigaal]]<br> {{small|''Raisulwasaare KMG''}}
+| [[Maxamed Cigaal]]<br> {{small|''Raisulwasaare KMG''}}
 | [[File:Mohammed Haaji Ibrahim Cigaal.jpg|80px]]
 | 1928–2002
 | —
@@ -37,7 +37,7 @@ Raisulwasaraayaashii Somaliya==
 | [[SYL]]
 |-
 ! style="background:#348AC9; color:white;"|3
-| [[Abdirashid Ali Shermarke]]
+| [[Abdirashid Shermarke]]
 | [[File:Sharmaarke.jpg|80px|link=Special:FilePath/Sharmaarke.jpg]]
 | 1919–1969
 | —
@@ -46,7 +46,7 @@ Raisulwasaraayaashii Somaliya==
 | [[SYL]]
 |-
 ! style="background:#348AC9; color:white;"|4
-| [[Cabdirisaaq Xaaji Xuseen]]
+| [[Cabdirisaaq Xuseen]]
 | [[File:Husein.jpg|80px]]
 | 1924–2014
 | —
@@ -55,7 +55,7 @@ Raisulwasaraayaashii Somaliya==
 | [[SYL]]
 |-
 ! style="background:#348AC9; color:white;"|(2)
-| [[Maxamed Xaaji Ibraahim Cigaal]]
+| [[Maxamed Cigaal]]
 | [[File:Mohammed Haaji Ibrahim Cigaal.jpg|80px]]
 | 1928–2002
 | —
@@ -68,7 +68,7 @@ Raisulwasaraayaashii Somaliya==
 |colspan="8" bgcolor="lightgrey" align=center|  [[File:Flag of Somalia.svg|25px]]  • '''[[Jamhuuriyadda Dimuqraadiga Soomaaliya]]''' (1969–1991) •  [[File:Coat of arms of Somalia.svg|20px]]
 |-
 ! style="background:#FE2E2E; color:white;"|5
-| [[Maxamed Cali Samatar]] 
+| [[Maxamed Samatar]] 
 | [[File:Mohamed Ali Samatar.png|80px]]
 | 1931–2016
 | —
@@ -77,7 +77,7 @@ Raisulwasaraayaashii Somaliya==
 | [[XHKS]]
 |-
 ! style="background:#FE2E2E; color:white;"|6
-| [[Maxamed Xawaadle Madar]]
+| [[Maxamed Madar]]
 | [[File:Coat of arms of Somalia.svg|80px]]
 | 1939–2005
 | —
@@ -86,7 +86,7 @@ Raisulwasaraayaashii Somaliya==
 | [[XHKS]]
 |-
 ! style="background:#FFFFFF; color:black"|7
-| [[Cumar Carte Qaalib]]
+| [[Cumar Carte]]
 | [[File:Omararteghalib.jpg|80px]]
 | 1930–
 | —
@@ -99,7 +99,7 @@ Raisulwasaraayaashii Somaliya==
 |colspan="8" bgcolor="lightgrey" align=center|  [[File:Flag of Somalia.svg|25px]]  • '''Dowlada Kumeelgaarka ah ee Soomaaliya''' (2000-2004) •  [[File:Coat of arms of Somalia.svg|20px]]
 |-
 ! style="background:#C0C0C0; color:black"| 8
-| [[Cali Khaliif Galayr]]
+| [[Cali Galayr]]
 |[[File:Dr._Ali Khalif_Galaydh_Photo.JPG|80px]]
 | 1941–
 | —
@@ -117,7 +117,7 @@ Raisulwasaraayaashii Somaliya==
 | ''Madaxbanaan''
 |-
 ! style="background:#C0C0C0; color:black"|9
-| [[Xasan Abshir Faarax]]
+| [[Xasan Abshir]]
 |
 | 1945–2020
 | —
@@ -126,7 +126,7 @@ Raisulwasaraayaashii Somaliya==
 | ''Madaxbanaan''
 |-
 ! style="background:#C0C0C0; color:black"|10
-| [[Maxamed Cabdi Yuusuf]]
+| [[Maxamed Yuusuf]]
 | [[File:Coat of arms of Somalia.svg|80px]]
 | 1945–
 | —
@@ -137,7 +137,7 @@ Raisulwasaraayaashii Somaliya==
 |colspan="8" bgcolor="lightgrey" align=center| [[File:Flag of Somalia.svg|25px]] •  '''[[Dowladda federaalka kumeelgaarka|Dowladda federaalka kumeelgaarka ee Soomaaliya]]''' (2004-2012) •  [[File:Coat of arms of Somalia.svg|20px]]
 |-
 ! style="background:#C0C0C0; color:black"|11
-| [[Ali Mohammed Ghedi]]
+| [[Ali Ghedi]]
 | [[File:Launch Of The Interim Jubba Administration (12054827393).jpg|70px]]
 | 1952–
 | —
@@ -146,7 +146,7 @@ Raisulwasaraayaashii Somaliya==
 | ''Madaxbanaan''
 |-
 ! style="background:#C0C0C0; color:black"| —
-| [[Saalim Caliyoow Ibroow]]<br> {{small|''Raisulwasaare KMG''}}
+| [[Saalim Ibroow]]<br> {{small|''Raisulwasaare KMG''}}
 | [[File:Coat of arms of Somalia.svg|80px]]
 | 1942–
 | —
@@ -164,7 +164,7 @@ Raisulwasaraayaashii Somaliya==
 | ''Madaxbanaan''
 |-
 ! style="background:#C0C0C0; color:black"|13
-| [[Cumar Cabdirashiid Cali Sharmaarke]]
+| [[Cumar Sharmaarke]]
 | [[File:Omarasharmarke4.jpg|80px]]
 | 1960–
 | —
@@ -173,7 +173,7 @@ Raisulwasaraayaashii Somaliya==
 | ''Madaxbanaan''
 |-
 ! style="background:#C0C0C0; color:black"|—
-| [[CabdiWaaxid Cilmi Goonjeex]]<br> {{small|''Raisulwasaare KMG''}}
+| [[Cabdiwaaxid Goonjeex]]<br> {{small|''Raisulwasaare KMG''}}
 | [[File:Coat of arms of Somalia.svg|80px]]
 | 1962–
 | —
@@ -191,7 +191,7 @@ Raisulwasaraayaashii Somaliya==
 | ''Madaxbanaan''
 |-
 ! style="background:#C0C0C0; color:black"|15
-| [[Cabdiweli Maxamed Cali]]
+| [[Cabdiweli Gaas]]
 | [[File:Cabdiweli Maxamed Cali.jpg|80px]]
 | 1965–
 | —
@@ -202,7 +202,7 @@ Raisulwasaraayaashii Somaliya==
 |colspan="8" bgcolor="lightgrey" align=center|  [[File:Flag of Somalia.svg|25px]]  • '''[[Dawladda federaalka Soomaaliya|Jamhuuriyadda Federaalka Soomaaliya]]''' (2012–present) •  [[File:Coat of arms of Somalia.svg|20px]]
 |-
 ! style="background:#C0C0C0; color:black"|(15)
-| [[Cabdiweli Maxamed Cali]]<br> {{small|''Raisulwasaare KMG''}}
+| [[Cabdiweli Gaas]]<br> {{small|''Raisulwasaare KMG''}}
 | [[File:Cabdiweli Maxamed Cali.jpg|80px]]
 | 1965–
 | —
@@ -211,7 +211,7 @@ Raisulwasaraayaashii Somaliya==
 | ''Madaxbanaan''
 |-
 ! style="background:#C0C0C0; color:black"|16
-| [[Cabdi Faarax Shirdoon]]
+| [[Cabdi Shirdoon]]
 |
 | 1958–
 | — 
@@ -229,7 +229,7 @@ Raisulwasaraayaashii Somaliya==
 | ''Madaxbanaan''
 |-
 ! style="background:#C0C0C0; color:black"|13
-| [[Cumar Cabdirashiid Cali Sharmaarke]]
+| [[Cumar Sharmaarke]]
 | [[File:Omarasharmarke4.jpg|80px]]
 | 1960–
 | —
@@ -247,7 +247,7 @@ Raisulwasaraayaashii Somaliya==
 |''Madaxbanaan''
 |-
 !(15)
-|[[Mahdi Mohamed Guleid]]
+|[[Mahdi Guleid]]
 |[[File:Mahdi Mohammed Gulaid - 2020.jpg|thumb|83x83px]]
 |
 |—
