*Empty MediaWiki Message*

--- a/Ra'iisul_wasaarayaashii_Soomaaliya.mw
+++ b/Ra'iisul_wasaarayaashii_Soomaaliya.mw
@@ -37,7 +37,7 @@ Raisulwasaraayaashii Somaliya==
 | [[SYL]]
 |-
 ! style="background:#348AC9; color:white;"|3
-| [[Abdirashid Shermarke]]
+| [[Cabdirashiid Sharmarke]]
 | [[File:Sharmaarke.jpg|80px|link=Special:FilePath/Sharmaarke.jpg]]
 | 1919–1969
 | —
