--- a/Khaatumo.mw
+++ b/Khaatumo.mw
@@ -1,54 +1,58 @@
+{{Infobox country
+|conventional_long_name = Dowlad Goboleedka Khaatumo ee Soomaaliya
+|common_name = Khatumo
+|image_flag = Flag of Khaatumo State of Somalia.svg   
+|image_coat = 
+|image_map = KhatumoStateloc.PNG
+|national_motto = 
+|demonym = Khatumite<ref name=2009factbook>{{cite web |url=https://www.cia.gov/library/publications/the-world-factbook/geos/so.html |title=Somalia |accessdate=31 May 2009 |date=14 May 2009 |work=[[World Factbook]] |publisher=[[Central Intelligence Agency]]}}</ref>
+|capital = [[Buuhoodle]] 
+|coordinates = {{Coord|9|8|N|48|25|E|type:city}}
+|largest_city = Laascaanood
+|government_type = ismaamul Dimuqraadiyad madaxtooyo
+|leader_title1 = Madaxweyne
+|leader_name1 = [[Cali Khaliif Galayr]]
+|area_rank = 
+|area_magnitude = 
+|area_km2 = 
+|area_sq_mi = 
+|percent_water = 
+|population_estimate_rank = 
+|population_census = |population_census_year = 
+|population_density_km2 = |population_density_sq_mi = 
+|population_density_rank = 
+|GDP_PPP_year = |GDP_PPP = |GDP_PPP_rank = |GDP_PPP_per_capita = |GDP_PPP_per_capita_rank = 
+|Gini_year = |Gini_change =  <!--increase/decrease/steady--> |Gini =  <!--number only--> |Gini_ref = |Gini_rank = 
+|HDI_year = |HDI_change =  <!--increase/decrease/steady--> |HDI =  <!--number only--> |HDI_ref = |HDI_rank = 
+|sovereignty_type = [[Ismaamul]]
+|sovereignty_note = ka dhaxyaala [[Soomaaliya]]
+|established_event1 = Established
+|established_date1 = 2012
+|currency = [[Shilin Soomaali]]
+|currency_code = SOS
+|iso3166code = SO
+|time_zone = [[Waqtiga Afrikada Bari|EAT]]
+|utc_offset = +3
+|time_zone_DST = Malahan
+|utc_offset_DST = +3
+|calling_code = [[+252]] {{small|(Soomaaliya)}}
+|cctld = [[.so]]
+}}
+'''Khaatumo''' sida rasmiga ah loogu yeero '''Dowlad Goboleedka Khaatumo ee Soomaaliya''' , waa dowlad goboleed ku taala waqooyiga Soomaaliya <ref>{{Cite journal|last=Stremlau|first=Nicole|date=2018|title=GOVERNANCE WITHOUT GOVERNMENT IN THE SOMALI TERRITORIES|url=http://www.jstor.org/stable/26552330|journal=Journal of International Affairs|volume=71|issue=2|pages=73–89|issn=0022-197X}}</ref>. Waxay ka koobantahay gobollada Sool , Sanaag iyo Cayn ama SSC , hoggaamiyeyaasheedu waxay ku dhawaaqeen dhulku inuu yahay dowlad madax-bannaan 2012.<ref name="Srwiks">{{cite news|title=What is Khatumo State?|url=http://www.somaliareport.com/index.php/post/3271/What_is_Khatumo_State|accessdate=27 September 2013|newspaper=Somalia Report|date=26 April 2012|url-status=dead|archiveurl=https://web.archive.org/web/20140312061049/http://www.somaliareport.com/index.php/post/3271/What_is_Khatumo_State|archivedate=12 March 2014|df=dmy-all}}</ref> 
 
-{{Macluumaad maamulada Soomaaliya
-|Name = Maamul Goboleedka Khaatumo oo beesha Darawiish
-|AlternateName = ولاية خاتمة
-|Fullname = Khatumo State oo Beesha Darawiish
-|EntityAdjective = Provincial
-|Official Logo = 
-|Flag = KSS flag.svg
-|CoatOfArms =Coat of arms of Somalia.svg 
-|Map = KhatumoStateloc.PNG
-|Motto = {{nowrap|"Midnimada beesha Darawiish" <small>(Soomaaliya)<br/>"Waa" (Muqadas)</small>}}
-|OfficialLang = Soomaali <small>(''Xoogaa Carabi ah'')</small>
-|Demonym = Dawlad goboleedka beesha darawiish Khaatumo<br/>Maamul Goboleedka Soomaaliyeed ee Khaatumo<br/><small>(Khaatumo)</small>
-|Capital = [[Taleex]]
-|LargestCity = [[Laascaanood]]
-|LargestMetro = [[Ceerigaabo]]
-|EntityAdjective = Baarlamaan
-|LegislativeType = Gudoomiyaha baarlamaanka
-|Speaker = cali awaare|PresidentType = Madaxweyne
-|President = [[Cabdalle Maxamuud Cagalule]]
-|Vice President = Indhosheel
-|Vice PresidentParty = Xisbi kama tirsana
-|Legislature = Baarlamaanka Federaalka Soomaaliya
-|PostalAbbreviation = SO (gaarka PL)|PostalCodePrefix = [[Furaha Posto ee Soomaaliya|KH]]
-|AreaRank = 10aad
-|TotalArea_km2 = 3456
-|LandArea_km2 = 2456
-|WaterArea_km2 = 50
-|PercentWater = 1
-|PopulationRank = 8aad
-|Population = 1500000
-|PopulationRef = (2013)|PopulationYear = 2013|DensityRank = 8ad|Density_km2 = 1|
-| GDP_year            = 2011
-| GDP_total           = C$3.624&nbsp;billion
-| GDP_rank            = 3aad
-| GDP_per_capita      = C$1,556
-| GDP_per_capita_rank = 3aad
-|AdmittanceOrder = 12th|AdmittanceDate = Agosto 26, 2014
-|TimeZone = [[UTC]]+3
-|HouseSeats = 11
-|SenateSeats = 6
-|ISOCode = SO-KH
-|Color = [[File:Himmelblau.jpg|left|30px]]
-|Symbol = [[File:White star on blue.gif|left|30px]]
-|Website = Ma jiro}}
+20kii Oktoobar [[2017]] magaalada [[Caynabo]] , waxaa heshiis lala galay dawladda [[Somaliland]] kaas oo dhigaya in wax laga beddelo dastuurka Somaliland iyo in ururka lagu daro dawladda Somaliland <ref name=":0">{{Cite web|last=Mahmood|first=Omar S.|date=2019-11-01|title=Overlapping Claims by Somaliland and Puntland: The Case of Sool and Sanaag|url=https://www.africaportal.org/publications/overlapping-claims-somaliland-and-puntland-case-sool-and-sanaag/|access-date=2020-06-29|website=Africa Portal}}</ref> <ref>{{Cite web|date=2017-10-21|title=Khaatumo and Somaliland reach final agreement|url=http://somalilanddaily.com/articles/137/Khaatumo-and-Somaliland-reach-final-agreement|access-date=2020-06-29|website=somalilanddaily.com|language=English}}</ref>. Tani waxay calaamad u ahayd dhammaadkii ururka inkasta oo ay ahayd dhacdo aan caan ku ahayn bulshada [[Dhulbahante]]<ref name=":1">{{Cite journal|last=Doon|first=Run|date=|title=Current Affairs in the Horn of Africa|url=https://www.michael-walls.com/wp-content/uploads/Run-Doon-180817_web.pdf|journal=Anglo-Somali Society Journal,|volume=Autumn 2017|issue=Somaliland, Khaatumo agreement reached|pages=|via=}}</ref>.
 
-Maamul goboleedka Soomaaliyeed ee beesha darawiish oo Khaatumo waa maamul goboleed ka mida ah kana tirsan jamhuuriyadda Soomaaliya. Khaatumo waxa ay ku taalaa waqooyiga soomaaliya waxaana dega qabiillo badan, waxaa ay ku abtirsataa gobalada sool iyo sanaag, waana maamul midnimo soomaaliyeed ah raba waxa ka madaxa ah '''Cabdalle Maxamuud Cagalule.''' 
+==Taariikh ==
+Magaca Khaatumo waxaa laga soo qaatay eray carabi ah oo macnaheedu yahay "gabagabada wanaaga." Ujeeddada maamulku wuxuu yahay in horumarka iyo xasilloonida loo soo qaado gobolka iyada oo la dhisayo dawlad maxalli ah. Taariikh ahaan, gobollada Sool, Sanaag iyo Cayn (SSC) ee Soomaaliya waxay u adeegeen labada kursi ee [[Suldanadi Warsangali]] iyo [[Dowladii Daraawiishta|Dawlad goboleedka Daraawiishta]]. 
+[[File:Khatumohd4.png|thumb|left|Xaflad ku saabsan Khaatumo oo lagu qabtay [[Dubay]] (2013).]]
+Maamulida dhulka waxaa ku muransan Dowlad Goboleedka Khaatumo (oo hore u eheed HBM-SSC ama Hoggaanka Badbaadada iyo Mideynta SSC), ismaamul goboleedka Soomaaliyeed ee [[Puntland]], iyo ismaamul goboleedka [[somaliland]]<ref>[http://wardheernews.com/Articles_2010/June/Buh/29_Somaliland_recognition_&_the_HBM-SSC_Factor.html Somaliland’s Quest for International Recognition and the HBM-SSC Factor] {{webarchive|url=https://web.archive.org/web/20120528122058/http://wardheernews.com/Articles_2010/June/Buh/29_Somaliland_recognition_%26_the_HBM-SSC_Factor.html |date=28 May 2012 }}</ref>. Sida ee sheegeen [[Ururka Dhaqdhaqaaqa Waqooyiga Soomaaliya]] (NSUM), hiigsiga Khaatumo State, NSUM wuxuu u taagan yahay dhiirrigelinta nabadda, dib u hishiisiinta iyo midnimada dhammaan dadka ka socda Soomaaliya. Ururku ma aqoonsana madax bannaanida gooni isutaagga Somaliland . Waxa kale oo ay ka soo horjeedaan qabsashadii 2007 ee gobolka Sool oo ay galeen ciidamada Somaliland . <ref name="NSUMau">{{Cite web|title=About us: Northern Somali Unionist Movement (NSUM) |url=http://n-sum.org/?q=node/7 |archiveurl=https://web.archive.org/web/20120216140612/http://n-sum.org/?q=node%2F7 |archivedate=16 February 2012 |url-status=dead }}</ref> Sannadkii 2010, maleeshiyaadka NSUM waxay ku lug lahaayeen isku dhac dhax maray iyaga iyo maliishiyaad reer Somaliland ah meel u dhaw tuulada [[Widhwidh]] , ee gobolka Cayn ee Soomaaliya.
+Sanadkii 2012, maamulka Khaatumo State ayaa la soo gabagabeeyey kadib shirar isdaba joog ah oo gudaha iyo dibadaba ah oo bilaawdey 2007dii oo u dhaxeeyay siyaasiyiin caan ah, madax dhaqameed iyo dadka deegaanka. Caasimadda dhulku waxay markii hore ahayd [[Taleex]] . Ilaa Agoosto 2014.
+
+Bishii Agoosto [[2016]] kooxda Khaatumo State waxay bilawday wada hadal nabadeed oo lala yeesho Somaliland . <ref>{{cite news|title=Wadahadallo u socda Somaliland iyo Khaatumo|url=http://www.bbc.com/somali/37008157|accessdate=19 November 2017|publisher=BBC Somali|date=16 August 2016}}</ref><ref>{{cite news|title=Somalia: Khatumo begins peace talks with Somaliland|url=https://www.garoweonline.com/en/news/somalia/somalia-khaatumo-begins-peace-talks-with-somaliland|accessdate=19 November 2017|publisher=Garowe Online|date=8 August 2016}}</ref> Wadahadalka, si kastaba ha ahaatee, wuxuu dhaliyay khilaaf weyn oo u dhexeeya madaxweynaha iyo madaxweyne ku xigeenka maamulka, Cali Khalif Galaydh iyo Cabdulle Agalule, kuwaas oo ugu dambeyntii soo saaray laba maamul oo kala duwan oo labadaba sheegtay inay yihiin dowlad sharci ah. <ref>{{cite news|title=Khilaaf ballaaran oo soo kala dhexgalay madaxda Khaatumo|url=http://www.bbc.com/somali/40832517|accessdate=19 November 2017|publisher=BBC Somali|date=4 August 2017}}</ref> Kooxda uu hogaaminayo Cali Khalif waxay heshiis la galeen Somaliland , magaalada [[Caynabo]] Oktoobar 2017, kaas oo dhigaya in marka la eego shuruudaha wax laga beddelo dastuurka Somaliland , in ururku la midoobo doono dowladda Somaliland.
 
 
-== Taariikh ==
-Agoosto 2017, waxaa Cabdalle Maxamuud Cagalule lo doortay Madaxweyne beesha darawiish ee Khatumo.
+==Tixraac==
 
-{{Maamulada Soomaaliya}}
-[[Category:Maamulada Soomaaliya]]
+
+
+[[category:Dowlad goboleedyada Soomaaliya]]
