--- a/Maxamed_Jawaari.mw
+++ b/Maxamed_Jawaari.mw
@@ -3,8 +3,8 @@
 |-
 {{#if: |
 {{!}} colspan="2" style="font-size: smaller;  text-align: center;" {{!}} [[File:|200px]]<br />{{{caption|}}}}}
-| colspan="2" style="font-size: larger; text-align: center;" | '''Maxamed-Cismaan-Jawaarey'''<br />محمد عثمان الجواري<br />
-[[File:2012 10 24 AMISOM Parliament Speaker E (8134659905).jpg|thumb|Prof: Maxamed Cismaan Jawaari]]
+| colspan="2" style="font-size: larger; text-align: center;" | '''Maxamed Jawaarey'''<br />محمد عثمان الجواري<br />
+[[File:2012 10 24 AMISOM Parliament Speaker E (8134659905).jpg|thumb|Prof: Maxamed Jawaari]]
 |-
 ! colspan="2" style="background-color: #cae1ff; text-align: center;" | [[Liiska Afhayeenada Baarlamaanka Soomaaliya|Af-hayeenka Baarlamaanka]]
 |-
@@ -38,7 +38,7 @@
 | '''{{{3|[[File:Flag_of_Somalia.svg|25px]]}}}''' [[Soomaaliya|Soomaali]]
 |-
 |}
-'''Maxamed Cusmaan Jawaari''' ([[Af-Carabi|Af-Carabi:]] محمد عثمان الجواري‎) (dhashay 7 [[Diseembar]] 1945) waa siyaasi iyo gudoomiyaha baarlamaanka [[Soomaaliya]]
+'''Maxamed Jawaari''' ([[Af-Carabi|Af-Carabi:]] محمد عثمان الجواري‎) (dhashay 7 [[Diseembar]] 1945) waa siyaasi iyo gudoomiyaha baarlamaanka [[Soomaaliya]]
 
 == Taariikh nololeed ==
 Maxamed jawaari wuxuu ku dhashay degmada [[Afgooye]] [[1945]]<ref>[http://www.voasomali.com/content/article/1497220.html], "waxa uu 7dii bishii December ee sanadkii 1945tii ku dhashay degmada Afgoye" </ref>,wuxuu registration ka qaatay degmada Buurhakaba, wuxuu ka baxay jaamacadda ummadda Soomaaliyeed, waa Khabiir taqasusyo badan soo sameeyay xagga shareecada Islaamka iyo law-ga 'comprehensive Law' waa nin ka soo shaqeeyay dhowr dastuur oo Soomaaliya lahayd laga soo bilaabo [[1960]]-kii."
