/* Madaxweynayaasha Puntland (1998-joogo) */

--- a/Madaxweyneyaashii_Puntland.mw
+++ b/Madaxweyneyaashii_Puntland.mw
@@ -22,11 +22,11 @@ Tani waa liiska Madaxweynayaasha [[Puntland]], Dawlad-goboleedka waa huwanaansha
 |- valign=top bgcolor="#ffffec"
 ||<small>8 Janaayo 2005 - 8 Janaayo 2009||[[File:Cadde1.jpg|60px]]||'''[[Maxamuud Muuse Xirsi Cadde]]''', <small>Madaxweyne||<small>n-p||<small>
 |- valign=top bgcolor="#ffffec"
-||<small>8 Janaayo 2009 - 8 Janaayo 2014||[[File:Abdirahman Farole.jpg|60px]]||'''[[Cabdiraxmaan Maxamuud Faroole]]''', <small>Madaxweyne||<small>Horseed||<small>
+||<small>8 Janaayo 2009 - 8 Janaayo 2014||[[File:Abdirahman Farole.jpg|60px]]||'''[[Cabdiraxmaan Faroole]]''', <small>Madaxweyne||<small>Horseed||<small>
 |- valign=top bgcolor="#ffffec"
-||<small>8 Janaayo 2014 Ilaa iyo hadda xilka haya ||[[File:Cabdiweli Maxamed Cali.jpg|60px]]||'''[[Cabdiweli Maxamed Cali]]''', <small>Madaxweyne||<small>UDAD||<small>
+||<small>8 Janaayo 2014 Ilaa iyo hadda xilka haya ||[[File:Cabdiweli Maxamed Cali.jpg|60px]]||'''[[Cabdiweli Gaas]]''', <small>Madaxweyne||<small>UDAD||<small>
 |- valign=top bgcolor="#ffffec"
-||<small>8 Janaayo 2019 Ilaa iyo hadda xilka haya ||||'''[[Saeed Abdoulaye Denis]]''', <small>Madaxweyne||<small>UDAD||<small>
+||<small>8 Janaayo 2019 Ilaa iyo hadda xilka haya ||||'''[[Saeed Deni]]''', <small>Madaxweyne||<small>UDAD||<small>
 |}
 
 [[Category:Siyaasadda Soomaaliya]]
