*Empty MediaWiki Message*

--- a/Netfilikis.mw
+++ b/Netfilikis.mw
@@ -70,3 +70,6 @@ Bishii Luulyo 2012, Netflix wuxuu shaqaaleysiiyay Kelly Bennett - Madaxweynihii 
 Websaydhka Netflix waxay leeyihiin 117.6 milyan oo macaamiil ah ilaa sanadka 2018, iyadoo 8.3 milyan lagu daray rubuc-afaraad ee 2017.  Laga bilaabo Janaayo 28, 2018, Shabakada Netflix waxay gashay kaalinta 30-aad ee shabakadaha ganacsiga ugu weyn adduunka iyo 9.-ka websaydhka ugu ganacsiga badan Mareykanka.
 
 Netflix waxay leedahay barta Twitter-ka, oo loo isticmaali jiray inay ku qorto tigreega dhacdooyinka cusub iyo kuwa soo socda oo ay ku jiraan haashtaha si loogu dhiirrigeliyo ka-soo-qaybgalayaasha dhagaystayaasha in ayan kaliya daawanin bandhigga laakiin ay wax ku biiriyaan hashtag laftooda.
+
+== Tixraacyada ==
+{{reflist}}{{reflist}}
