*Empty MediaWiki Message*

--- a/Axmed_Siilaanyo.mw
+++ b/Axmed_Siilaanyo.mw
@@ -1,8 +1,8 @@
 {{Macluumaad Qof Madax Ah
-|name          = Ahmed Mohamed Mohamoud<br>{{small|{{lang|ar|احمد محمد محمود}}}}
+|name          = Ahmed Siilaanyo<br>{{small|{{lang|ar|احمد محمد محمود}}}}
 |office        = [[Madaxweyne|Madaxweynihii]] [[Madaxweyneyaashii Somaliland|4aad]] ee [[Jamhuuriyadda]] [[Somaliland]]
 |image         = Ahmed Mohamed Mohamoud Silanyo - Chatham House 2010.jpg
-|caption       = Axmed Maxamed Maxamuud oo Jooga Xafiiskisa Madax Toyada ee ku taala Hargeysa, Somaliland.
+|caption       = Axmed Siilaanyo oo Jooga Xafiiskisa Madax Toyada ee ku taala Hargeysa, Somaliland.
 |vicepresident = [[Cabdiraxmaan Saylici]]
 |term_start    = 27 July 2010
 |term_end      =13 December 2017 
@@ -21,7 +21,7 @@
 |website = 
 }}
 
-'''Axmed Maxamed Maxamuud (Siilaanyo)''' ({{lang-en|''Ahmed Mohamed Mohamoud''}}) wuxuu dhashay 1936kii, wuxuuna ahaa madaxweynihii 4aad ee jamhuuriyadda [[Somaliland]] sanadihii 2010-2017. Waxa kursiga madaxtinimada loo doortay 26 June 2010 xilkiisina wuxuu dhamaaday 13 Diseembar 2017. Wakhtigii uu madaxweyne ahaa wixuu gaadhsiyeey dalka Somaliland halkii ay hada marayso.
+'''Axmed Siilaanyo''' ({{lang-en|''Ahmed Siilaanyo''}}) wuxuu dhashay 1936kii, wuxuuna ahaa madaxweynihii 4aad ee jamhuuriyadda [[Somaliland]] sanadihii 2010-2017. Waxa kursiga madaxtinimada loo doortay 26 June 2010 xilkiisina wuxuu dhamaaday 13 Diseembar 2017. Wakhtigii uu madaxweyne ahaa wixuu gaadhsiyeey dalka Somaliland halkii ay hada marayso.
 
 == Taariikhdiisa oo kooban, ==
 
