--- a/Xirsi_Gaataa.mw
+++ b/Xirsi_Gaataa.mw
@@ -1,5 +1,5 @@
 {{Macluumaad askariga
-| honorific_prefix  = Xirsi Siciid Faarax (Xirsi Gaataa)
+| honorific_prefix  = Xirsi Gaataa
 | name              =
 | honorific_suffix  = Hirsi Said Farah (Hirsi Gataa)
 | native_name       = Soomaali
@@ -44,7 +44,7 @@
 | signature     = 
 | website       = <!-- {{URL|example.com}} -->
 }}
-'''S/G Xirsi Siciid Faarax (Xirsi Gaataa)''' Taliyihii ugu horeeyay Ciidanka Booliska Soomaaliyeed ee [[Soomaaliya| Puntland]] Waxa uu ku Dhashay Magaalada [[Magaalo| Boosaaso]] ee gobolka [[Gobol|Bari]] Sanadii 1850. wuxuu ku dhintay Magaalada [[Hargeysa]] Sanadii 2017. Wuxuu ka mid ahaa Saraakiisha [[Soomaaliyeed]] ee Xiliga dheer soo shaqaysay, kuna caan baxay wadaniyada Iyo Hawlkarnimada.
+'''S/G Xirsi Siciid Gaataa''' Taliyihii ugu horeeyay Ciidanka Booliska Soomaaliyeed ee [[Soomaaliya| Puntland]] Waxa uu ku Dhashay Magaalada [[Magaalo| Boosaaso]] ee gobolka [[Gobol|Bari]] Sanadii 1850. wuxuu ku dhintay Magaalada [[Hargeysa]] Sanadii 2017. Wuxuu ka mid ahaa Saraakiisha [[Soomaaliyeed]] ee Xiliga dheer soo shaqaysay, kuna caan baxay wadaniyada Iyo Hawlkarnimada.
 
 ==Taariikh==
  
