*Empty MediaWiki Message*

--- a/Maxamed_Fadal.mw
+++ b/Maxamed_Fadal.mw
@@ -1,4 +1,4 @@
-'''Maxamed Nuur Fadal''' waa abwaan [[Soomaali]]yeed, wuxuu ku dhashay kuna barbaaray Degmada [[Berbera]] xilli ku beegnaa [[1885]]. Mas’uuliyiinta mustacmaraddii Ingriiska ee u fadhi jirtey Somaliland waxay isla markii ay heshiisyada la galeen odayaashii beelaha Somaliland 1884kii dareemeen in dadka dhulkaa deggani ay yihiin kuwo ka duwan Afrikaanka iyo Carabta labadaba, lehna firfircooni iyo adkaysi dheeraad ah isla markaana geesiyaal ah. Xilli ku beegan 1900 oo ahayd markii u bilaabmay dagaalkii la odhan jiray Boer War ee u dhexeeyay dadka
+'''Maxamed Fadal''' waa abwaan [[Soomaali]]yeed, wuxuu ku dhashay kuna barbaaray Degmada [[Berbera]] xilli ku beegnaa [[1885]]. Mas’uuliyiinta mustacmaraddii Ingriiska ee u fadhi jirtey Somaliland waxay isla markii ay heshiisyada la galeen odayaashii beelaha Somaliland 1884kii dareemeen in dadka dhulkaa deggani ay yihiin kuwo ka duwan Afrikaanka iyo Carabta labadaba, lehna firfircooni iyo adkaysi dheeraad ah isla markaana geesiyaal ah. Xilli ku beegan 1900 oo ahayd markii u bilaabmay dagaalkii la odhan jiray Boer War ee u dhexeeyay dadka
  
 Arar: Sheekh Ismaaciil Jaamac Cigaal oo loo yaqaanney Fadal wuxuu ahaa sheekh caalim ah oo ku noolaa dhulka gubanka loo yaqaan ee Degmada Xagal iyo xeebta Badda Cas ee bariga Berbera horraantii qarnigii 18aad. Sheekh Fadal markii cimrigiisu weynaadey waxa uu caado ka dhigtay inuu sannad kasta soo guto waajibaadka Xajka. Lama hayo inta jeer ee Sheekh Fadal soo xajiyey, waxase la isku raacsan yahay in uu muddo aad u dheer booqananyey Xaramka oo ku noqnoqon jirey gudashada waajibaadkaas. Sheekh Fadal waxa mar u wada kacay, isna raacay hanaqaad ahaan shan wiil iyo gabadh ay carruurtiisu ka koobnayd.
  
