*Empty MediaWiki Message*

--- a/Muuse_Biixi.mw
+++ b/Muuse_Biixi.mw
@@ -1,5 +1,5 @@
 {{Macluumaad Qof Madax Ah
-|name          = Muuse Biixi Cabdi<br>{{small|{{lang-ar|موسى بيحي عبدي}}}}
+|name          = Muuse Biixi <br>{{small|{{lang-ar|موسى بيحي عبدي}}}}
 |office        = [[Madaxweyne|Madaxweynihii]] [[Madaxweyneyaashii Somaliland|5aad]] ee [[Jamhuuriyadda]] [[Somaliland]]
 |image         = Musabehi123.jpg
 |caption       = 
@@ -21,7 +21,7 @@
 |website = 
 }}
 
-'''Muuse Biixi Cabdi''' ({{lang-en|''Musa Bihi Abdi''}}) waa madaxweynaha 5aad ee Jamhuuriyadda iskeed madaxbannaanidda ugu dhawaaqdey ee [[Somaliland]] kadib markii ay bilowday xilkiisa markii uu ku guuleystay doorashoynka sanadka 2017.
+'''Muuse Biixi''' ({{lang-en|''Musa Bihi''}}) waa madaxweynaha 5aad ee Jamhuuriyadda iskeed madaxbannaanidda ugu dhawaaqdey ee [[Somaliland]] kadib markii ay bilowday xilkiisa markii uu ku guuleystay doorashoynka sanadka 2017.
 
 == Taariikh ==
 Muuse Biixi wuxuu uu dhashay taarikhdu sanadkii 1948, waxa uu ku dhashay galbeedka Hargeysa tuullo yar oo u taal agaas.
