*Empty MediaWiki Message*

--- a/Another_Cinderella_Story.mw
+++ b/Another_Cinderella_Story.mw
@@ -1,4 +1,16 @@
-'''''Another Cinderella Story''''' (''Sheeko kale oo Cinderella ah'') waa filim majaajillo Mareykan ah oo 2008 ah oo uu hago Damon Santostefano oo ay qoreen Erik Patterson iyo Jessica Scott. jilaayaasha filimkan waa [[Selena Gomez]], [[Drew Seeley]] iyo [[Jane Lynch]].{{Infobox film|name=Another Cinderella Story|cinematography=Jon Joffin|country=United States|runtime=92 minutes|released={{Film date|2008|9|16}}|distributor=[[Warner Premiere]]|studio=Dylan Sellers Productions|editing=Tony Lombardo|music=[[John Paesano]]|image=|starring={{Plainlist|
+'''''Another Cinderella Story''''' (''Sheeko kale oo Cinderella ah'') waa filim majaajillo Mareykan ah oo 2008 ah oo uu hago Damon Santostefano oo ay qoreen Erik Patterson iyo Jessica Scott. jilaayaasha filimkan waa [[Selena Gomez]], [[Drew Seeley]] iyo [[Jane Lynch]].
+{{Infobox film
+|name=Another Cinderella Story
+|cinematography=Jon Joffin
+|country=United States
+|runtime=92 minutes
+|released={{Film date|2008|9|16}}
+|distributor=[[Warner Premiere]]
+|studio=Dylan Sellers Productions
+|editing=Tony Lombardo
+|music=[[John Paesano]]
+|image=
+|starring={{Plainlist|
 * [[Selena Gomez]]
 * [[Drew Seeley]]
 * [[Jane Lynch]]
@@ -7,7 +19,41 @@
 * [[Jessica Parker Kennedy]]
 * [[Marcus T. Paulk]]
 * Nicole LaPlaca
-}}|based on=|writer={{Plainlist|
+}}
+|based on=
+|writer={{Plainlist|
 * [[Erik Patterson]]
 * Jessica Scott
-}}|producer=Dylan Sellers|director=[[Damon Santostefano]]|caption=DVD cover/Promotional Poster|language=English}}
+}}
+|producer=Dylan Sellers
+|director=[[Damon Santostefano]]
+|caption=
+|language=English
+}}
+
+[[en: Another Cinderella Story]]
+[[ar: قصة أخرى لسندريلا]]
+[[it: Another Cinderella Story]]
+[[es: Another Cinderella Story]]
+[[fr: Comme Cendrillon 2]]
+[[ja: シンデレラ・ストーリー2 ドリームダンサー]]
+[[ko: 신데렐라 스토리 2]]
+[[nl: Another Cinderella Story]]
+[[pt: Another Cinderella Story]]
+[[ru: Ещё одна история о Золушке]]
+[[ca: Another Cinderella Story]]
+[[cs: A zase jedna Popelka]]
+[[da: Another Cinderella Story]]
+[[de: Another Cinderella Story]]
+[[fa: یک داستان سیندرلایی دیگر]]
+[[fi: Tuhkimotarina 2]]
+[[id: Another Cinderella Story]]
+[[pl: Kopciuszek: Roztańczona historia]]
+[[sv: Another Cinderella Story]]
+[[zh: 灰姑娘的歌舞情緣]]
+[[he: עוד סיפור סינדרלה]]
+[[hi: अनदर सिण्ड्रैला स्टोरी (२००८ चलचित्र)]]
+[[hy: Եվս մի պատմություն Մոխրոտիկի մասին]]
+[[ro: O altă Cenușăreasă modernă]]
+[[sr: Још једна прича о Пепељуги]]
+[[vi: Another Cinderella Story]]
