--- a/Axmed_Bide.mw
+++ b/Axmed_Bide.mw
@@ -1,5 +1,4 @@
-'''Axmed Suleeman Bide'''
-Marka aad maqasho magaca Axmed Saleebaan Bidde ,ayaa waxaa markiiba maskaxdaada ku soo dhacaya [[suugaan]] aad iyo aad u fara badan oo kooban dhamaanba noocyada kala duwan ee ay suugaantu leedahay, sida riwaayadaha, maajilada iyo gabayadaba.
+'''Axmed Bide''' Marka aad maqasho magaca Axmed Bidde ,ayaa waxaa markiiba maskaxdaada ku soo dhacaya [[suugaan]] aad iyo aad u fara badan oo kooban dhamaanba noocyada kala duwan ee ay suugaantu leedahay, sida riwaayadaha, maajilada iyo gabayadaba.
 Waxaa filayaa in Axmed Saleebaan Bidde uu yahay mid ka mid abwaanadii ugu qaalisan ee soo mara fanka marka laga hadlayo geyiga ay ku nool yihiin dadka Afka Somaaliga ku hadla, haddiiba aanu ahayn kan ugu horeeya.
 
 == waakuma axmed. s. bide ==
