*Empty MediaWiki Message*

--- a/Another_Cinderella_Story.mw
+++ b/Another_Cinderella_Story.mw
@@ -1,4 +1,4 @@
-'''''Another Cinderella Story''''' (''Sheeko kale oo Cinderella ah'') waa filim majaajillo Mareykan ah oo 2008 ah oo uu hago Damon Santostefano oo ay qoreen Erik Patterson iyo Jessica Scott. jilaayaasha filimkan waa [[Selena Gomez]], [[Drew Seeley]] iyo [[Jane Lynch]].
+'''''Another Cinderella Story''''' (''Sheeko kale oo Cinderella ah'') waa filim majaajillo Mareykan ah oo 2008 ah oo uu hago Damon Santostefano oo ay qoreen Erik Patterson iyo Jessica Scott. jilaayaasha filimkan waa [[Selena Gomez]], [[Drew Seeley]] iyo [[Jane Lynch]]<ref>https://movieweb.com/exclusive-damon-santostefano-brings-us-another-cinderella-story/</ref><ref>https://web.archive.org/web/20120407031802/http://www.eyeforfilm.co.uk/reviews.php?film_id=15319</ref><ref>https://christiananswers.net/spotlight/movies/2008/anothercinderellastory2008.html</ref>.
 {{Infobox film
 |name=Another Cinderella Story
 |cinematography=Jon Joffin
