*Empty MediaWiki Message*

--- a/Cabdilahi_Timocade.mw
+++ b/Cabdilahi_Timocade.mw
@@ -1,5 +1,5 @@
 {{Infobox writer
-| name         = Cabdillahi Suldaan Maxamed 'Timacade' <br> عبد الله سلطان محمد
+| name         = Cabdillahi Timacade <br> عبد الله سلطان محمد
 | image        = 
 | imagesize    = 
 | alt          = 
@@ -34,7 +34,7 @@
 | portaldisp   = 
 }}
 
-'''Cabdillaahii Suuldaan Maxamed "Timacade"''' ({{lang-en|Abdillahi Suldaan Mohammed}}, {{lang-ar|عبد الله سلطان محمد}}) wuxuu ahaa [[gabay]]aa, [[halabuur]] iyo xornimo-doon [[Soomaali]]yeed kaasi oo gayiga [[Soomaaliya]] si fiican looya yaqaaney.
+'''Cabdillaahii Timacade''' ({{lang-en|Abdillahi Suldaan Mohammed}}, {{lang-ar|عبد الله سلطان محمد}}) wuxuu ahaa [[gabay]]aa, [[halabuur]] iyo xornimo-doon [[Soomaali]]yeed kaasi oo gayiga [[Soomaaliya]] si fiican looya yaqaaney.
 
 ==Hordhac==
 Sanadkii 1920kii Timacade wuxuu ku dhashay tuulada [[Galooley]], oo u dhow magaalada [[Gabiley]] ee waqooyigalbeed maamulka maanta loo yaqaano [[Somaliland]]. Wakhtiyadii dhalinyarnimadiisa wuxuu Timacade ku soo noolaa deegaano kala duwan oo ka mid ah wadanka [[Itoobiya]] iyo [[Djibouti]] wakhtigaasi oo ku beegan qiyaastii 1940 ilaa 1950.
