*Empty MediaWiki Message*

--- a/Axmed_Cigaal.mw
+++ b/Axmed_Cigaal.mw
@@ -1,4 +1,4 @@
-'''Axmed cali Cigaal''' wuxuuna galaya fanka isagoo yar oo ah arday waxeyna eheed sanadkii [[1967]] wuuxuuna ku bilaabay Riwayadii la oran jiray (Shabeel Naagood) waxaa soo alifay xassan Shiikh Muumin, waxaa ku xigatay Riwayadii la oran jiray (Yaxaas Dhagaduub), waxaana soo alifay Maxamuud Sangub, waa labadii Riwaayadood ee igu horeeyey ee Ahmed, waxeena ahaayeen kuwii oo ku soo can baxay oo ku noqday Fanaan caan ka ka ah somaaliya.Sidoo kale horumarkii weynaa ee dhinacaga muusiga uu ka gaadhey Axmed waxey aheyd isaga oo asaasey kooxdii ama groupkii loo yiqiiney Somali Jazz oo soo bandhigay heesihii ugu horeeyey oo soomali ah ee soomaali waligeed aragato oo lagu ciyaari karo.
+'''Axmed Cigaal''' wuxuuna galaya fanka isagoo yar oo ah arday waxeyna eheed sanadkii [[1967]] wuuxuuna ku bilaabay Riwayadii la oran jiray (Shabeel Naagood) waxaa soo alifay xassan Shiikh Muumin, waxaa ku xigatay Riwayadii la oran jiray (Yaxaas Dhagaduub), waxaana soo alifay Maxamuud Sangub, waa labadii Riwaayadood ee igu horeeyey ee Ahmed, waxeena ahaayeen kuwii oo ku soo can baxay oo ku noqday Fanaan caan ka ka ah somaaliya.Sidoo kale horumarkii weynaa ee dhinacaga muusiga uu ka gaadhey Axmed waxey aheyd isaga oo asaasey kooxdii ama groupkii loo yiqiiney Somali Jazz oo soo bandhigay heesihii ugu horeeyey oo soomali ah ee soomaali waligeed aragato oo lagu ciyaari karo.
 == Ruwaayadaha ==
 Ahmed runtii wuxu ahaa nin yar marka uu Riwayadaha metalaayay kana heesayey kan a dhexmuuqday fanaaniintii la matelaysay Riwayadahaas Ahmed wuxuu ahaa nin ilaahay hibo u siiyey quwada xaga [fanka]]a iyo codka ah oo uu kaga soo dhex baxi jirey dhalintii u ku jiray markaas amba ha noqdeen kuwa uu kula jiray Iskuulka ama Fanka, Ahmed yaraantiisii wuxu ahaa nin ku xidhan xaga heesaha aadna ula socda.fanaanintii xilagaa hadaan tusaale u soo qaato kooxda ahmed uu carabka saaray mar la wayadiiyey suaashaas waxaa ka mid ahaa Walaal Hargaysa oo ahayd kooxda koowaad ee wadanka wuxuu Ahmed isku dayi jiray in uu noqodo sida fanaaniintaas oo kale oo uu uga maqlo heesihiisa Radiyiha Soomaaliya, hadaba suaasha Is waydiintalehi waxa weeyey Ahmed ma u hirgashay Riyadiisii. HAAA waxay ku qaadatay wax yar intuu la meeltegilahaa kuwii uu jeclaa uuna dhegaysan jiray heesahooda in uu noqodo sidooda oo kale .
 Ahmed wuxuu ka mid ahaa Fanaaniintii la wareegi jirtay Riwaayadaha gobolada Soomaaliya markaa isaga waxaa uu ka mid noqday Fanaaniinta sidaa dheer loo jecelahayahay waxay ka bixi jireeen ilaa Muqdisho to Boorama, [[Muqdisho]] ilaa kismaanyo, Muqdisho ilaa buula Xaawo MED CALI XAAJI AADAN DALABLE, waxuu la metelay khadro 10 riwaayad ka badan waxuu la heesay khado dahir kaigee ka badan 30, sidoo kale maryam mursal
