*Empty MediaWiki Message*

--- a/Another_Cinderella_Story.mw
+++ b/Another_Cinderella_Story.mw
@@ -4,7 +4,7 @@
 |cinematography=Jon Joffin
 |country=United States
 |runtime=92 minutes
-|released={{Film date|2008|9|16}}
+|released=2008
 |distributor=[[Warner Premiere]]
 |studio=Dylan Sellers Productions
 |editing=Tony Lombardo
@@ -31,6 +31,8 @@
 |language=English
 }}
 
+== Tixraacyada ==
+{{reflist}}{{reflist}}
 [[en: Another Cinderella Story]]
 [[ar: قصة أخرى لسندريلا]]
 [[it: Another Cinderella Story]]
