--- a/Shubaal_Maax.mw
+++ b/Shubaal_Maax.mw
@@ -1,5 +1,5 @@
 {{Macluumaad askariga
-| honorific_prefix  = Shubaal Muumin Maax
+| honorific_prefix  = Shubaal Maax
 | name              = شوبال المؤمن ماهي
 | honorific_suffix  = Shubal Mumin Mah
 | native_name       = Soomaali
@@ -33,7 +33,7 @@
 | signature     = 
 | website       = <!-- {{URL|example.com}} -->
 }}
-'''Gashaanle Shubaal Muumin Maax''' wuxuu ka tirsan yahay [[Ciidanka Booliska Soomaaliya]], Wuxuu ku Dhashay Magaalada [[Bari| Boosaaso]] ee gobolka [[Soomaaliya|Bari]]. Wuxuu ka mid yahay Saraakiisha [[Soomaaliyeed]] ee ugu Hawl karsan, Wadanisan, Dhowra Kuna Adadag Saraynta sharcgia Iyo Saraynta Karaamada shicibka Soomaaliyeed.
+'''Gashaanle Shubaal Maax''' wuxuu ka tirsan yahay [[Ciidanka Booliska Soomaaliya]], Wuxuu ku Dhashay Magaalada [[Bari| Boosaaso]] ee gobolka [[Soomaaliya|Bari]]. Wuxuu ka mid yahay Saraakiisha [[Soomaaliyeed]] ee ugu Hawl karsan, Wadanisan, Dhowra Kuna Adadag Saraynta sharcgia Iyo Saraynta Karaamada shicibka Soomaaliyeed.
 
 ==Hordhac==
 Gashaanle Shubaal Muumin Maax oo loogu yeero Gaashaanle Shubaal waxbarashadiisa Hoose Dhexe wuxuu ku qaatay Iskoolka [[Iskool| Boosaaso Public Secondary]] ee magaalada [[Bari|Boosaaso]]. waxbarashada Dugsiga Sare wuxuu ku qaatay Banaadir sare ee Magaalada [[Soomaaliya|Muqdisho]]. wuxuu Aaqoonta Jaamacadeed ku qaatay Jaamacada Umadda Soomaaliyeed "''Somali National University''" oo uu ka qaatay Koorso Diblooma ah
