*Empty MediaWiki Message*

--- a/Maxamed_Giriig.mw
+++ b/Maxamed_Giriig.mw
@@ -1,5 +1,5 @@
 {{Infobox person
-| honorific_prefix   = Maxamed Nuur Giriig
+| honorific_prefix   = Maxamed Giriig
 | name               =  محمد نور غيريغ
 | honorific_suffix   = 
 | image              = 
@@ -77,7 +77,7 @@
 | footnotes          = 
 }} 
 
-'''Maxamed Nuur Giriig''' ({{lang-en|''Mohamed Nuur Giriig''}}, {{lang-ar|محمد نور غيريغ}}) (dhashay horaantii 1935 - geeriyooday 2002) wuxuu ahaa [[fanaan]], [[hees]]a iyo [[laxan|laxamiiste]] aad caan ugu ahaa fagaaraha [[suugaan]]ta [[Soomaali]]da. Maxamed Nuur Giriig wuxuu ka mid ahaa [[Fanaan Soomaali|fanaaniinta Soomaalida]] ee ugu caansana wakhtigoodi, waxaana aad loogu xasuustaa heesaha [[jacayl]]ka iyo amaanta ah. 
+'''Maxamed Giriig''' ({{lang-en|''Mohamed Nuur Giriig''}}, {{lang-ar|محمد نور غيريغ}}) (dhashay horaantii 1935 - geeriyooday 2002) wuxuu ahaa [[fanaan]], [[hees]]a iyo [[laxan|laxamiiste]] aad caan ugu ahaa fagaaraha [[suugaan]]ta [[Soomaali]]da. Maxamed Nuur Giriig wuxuu ka mid ahaa [[Fanaan Soomaali|fanaaniinta Soomaalida]] ee ugu caansana wakhtigoodi, waxaana aad loogu xasuustaa heesaha [[jacayl]]ka iyo amaanta ah. 
 
 =Taariikh=
 Maxamed Nuur Giriig wuxuu ku dhashay magaalada [[Berbera]], [[Waqooyiga Soomaaliya]],  Fanaanku wuxuu dhashay horaantii sanadkii 1935kii wuxuuna geeriyooday sanadkii 2002da magaalada [[Hargeysa]] dhexdeeda asaga oo da'a ah.waxa ay soowada galeen fanka fanaankii weynaa e cismaan gacanlow heesa uu qaaday hobol giriig waxa sameeyay hormuudyada suugaanta codkiisa halaasiga ah awgeed
