*Empty MediaWiki Message*

--- a/Selena_Gomez.mw
+++ b/Selena_Gomez.mw
@@ -2,7 +2,7 @@
 {| class="infobox biography vcard" style="width:22em"
 ! colspan="2" style="text-align:center;font-size:125%;font-weight:bold" |<span class="fn">Selena Gomez</span>
 |-
-| colspan="2" style="text-align:center" |[[File:Selena Gomez Fuse News 2.png|alt=|frameless]]
+| colspan="2" style="text-align:center" |[[File:191125 Selena Gomez at the 2019 American Music Awards (cropped).png|alt=|frameless]]
 |-
 ! scope="row" |Dhalasho
 |<span class="nickname">Selena Marie Gomez</span><span style="display:none"> (<span class="bday">1992-07-22</span>) </span>Luuliyo 22, 1992<span class="noprint ForceAgeToShow"> (Waa&nbsp;27jir)</span>
@@ -39,6 +39,7 @@
 ! scope="row" |<span style="white-space:nowrap">Falalka la xiriira</span>
 |<div class="hlist " style="margin-left:0em;"><div class="plainlist">
 * [[Selena Gomez & the Scene]]
+* 
 * [[Taylor Swift]]
 </div></div>
 |-
