*Empty MediaWiki Message*

--- a/Xasan_Sheekh_Mumin.mw
+++ b/Xasan_Sheekh_Mumin.mw
@@ -77,7 +77,7 @@
 | footnotes          = Xasan Sheekh Muumin wuxuu ahaa qoraa, alifaa, ruwaayad-sameeye, halabuur, abwaan, laxamiiste, fikire iyo qof aad uga qeyb qaatay balaadhinta ''[[Fanka Soomaalida]]''. 
 }}
 
-'''Xasan Sheekh Muumin''' ({{lang-ar|حسن الشيخ مؤمن‎‎}}) (dhashay 1931 - geeriyooday 16 Janaayo 2008) wuxuu ahaa [[abwaan]], [[ruwaayad]]iiste, [[halabuur]], [[laxan]]miiste, qoraa, [[muusig]]yahan aad loogu aqoonsaday horumarinta [[Fanka Soomaalida]] wakhti dadku aqoon badan u lahayn fanka. Abwaanku wuxuu ku dhashay magaalada qadiimiga ah ee [[Saylac]] goor lagu qiyaaso 1931kii wuxuuna ku geeriyooday magaalada [[Oslo]] ee wadanka [[Norway]] sanadkii 2008dii. Abwaanku wuxuu ku aasan yahay magaalada [[Borama]].<ref>Aaskii abwaanka Shabeel-Naagood</ref>
+'''Xasan Muumin''' ({{lang-ar|حسن الشيخ مؤمن‎‎}}) (dhashay 1931 - geeriyooday 16 Janaayo 2008) wuxuu ahaa [[abwaan]], [[ruwaayad]]iiste, [[halabuur]], [[laxan]]miiste, qoraa, [[muusig]]yahan aad loogu aqoonsaday horumarinta [[Fanka Soomaalida]] wakhti dadku aqoon badan u lahayn fanka. Abwaanku wuxuu ku dhashay magaalada qadiimiga ah ee [[Saylac]] goor lagu qiyaaso 1931kii wuxuuna ku geeriyooday magaalada [[Oslo]] ee wadanka [[Norway]] sanadkii 2008dii. Abwaanku wuxuu ku aasan yahay magaalada [[Borama]].<ref>Aaskii abwaanka Shabeel-Naagood</ref>
 
 Abwaan Xasan Sheekh waxaa aad loogu xasuustaa [[ruwaayad]]aha uu sameeyay ee ka mid tahay ''"Shabeel Naagood"''.<ref> Shaqooyinka Abwaanka "Haywardlewis"{{cite book|last=R. J. Hayward|first=I. M. Lewis|title=Voice and Power: The Culture of Language in North-East Africa : Essays in Honour of B.W. Andrzejewski|year=1996|publisher=Psychology Press|isbn=0728602571|pages=Appendix xv|url=https://books.google.com/books?id=SFfdmXY9X0UC&pg=PP18#v=onepage&q&f=false}}</ref>
 
